<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>TP1</artifactId>
        <groupId>srsc.fct.unl.pt</groupId>
        <version>1.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>testing</artifactId>

    <properties>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>srsc.fct.unl.pt</groupId>
            <artifactId>server</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>srsc.fct.unl.pt</groupId>
            <artifactId>box</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>srsc.fct.unl.pt</groupId>
            <artifactId>utils</artifactId>
            <version>1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>srsc.fct.unl.pt</groupId>
            <artifactId>testing</artifactId>
            <version>1.0</version>
        </dependency>
    </dependencies>

</project>